Adding app before deadline.